# src/controller/sprintController.js
@@ -1,4 +1,5 @@
 const sprintService = require('../service/sprintService');
+const { createSprintReport } = require('../service/reportService');
 
 const parseId = (value, field) => {
   const id = Number(value);
@@ -13,11 +14,25 @@ const parseId = (value, field) => {
 exports.list = (req, res) => res.json(sprintService.getAllSprints());
 exports.getById = (req, res) => res.json(sprintService.assertSprint(parseId(req.params.sprintId, 'sprintId')));
 exports.create = (req, res) => res.status(201).json(sprintService.createSprint(req.body));
+exports.exportReport = (req, res) => {
+  const sprint = sprintService.assertSprint(parseId(req.params.sprintId, 'sprintId'));
+  const filename = `relatorio-sprint-${sprint.id}.pdf`;
+  res.set({ 'Content-Type': 'application/pdf', 'Content-Disposition': `attachment; filename="${filename}"` });
+  const report = createSprintReport(sprint);
+  report.pipe(res);
+  report.end();
+};
 exports.update = (req, res) => res.json(sprintService.updateSprint(parseId(req.params.sprintId, 'sprintId'), req.body));
 exports.addDay = (req, res) => res.status(201).json(sprintService.addDay(parseId(req.params.sprintId, 'sprintId'), req.body));
 exports.updateDay = (req, res) => res.json(sprintService.updateDay(parseId(req.params.sprintId, 'sprintId'), parseId(req.params.dayId, 'dayId'), req.body));
 exports.removeDay = (req, res) => {
   sprintService.removeDay(parseId(req.params.sprintId, 'sprintId'), parseId(req.params.dayId, 'dayId'));
+  res.status(204).send();
+};
+exports.addAnnotation = (req, res) => res.status(201).json(sprintService.addAnnotation(parseId(req.params.sprintId, 'sprintId'), req.body));
+exports.updateAnnotation = (req, res) => res.json(sprintService.updateAnnotation(parseId(req.params.sprintId, 'sprintId'), parseId(req.params.annotationId, 'annotationId'), req.body));
+exports.removeAnnotation = (req, res) => {
+  sprintService.removeAnnotation(parseId(req.params.sprintId, 'sprintId'), parseId(req.params.annotationId, 'annotationId'));
   res.status(204).send();
 };
 exports.addAttentionPoint = (req, res) => res.status(201).json(sprintService.addAttentionPoint(parseId(req.params.sprintId, 'sprintId'), req.body));
